# ACIOS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base.py  factory.py
agents/roles/: __init__.py  ceo_agent.py  cfo_agent.py  cto_agent.py  developer_agent.py  hr_agent.py  marketing_agent.py  operations_agent.py  sales_agent.py  support_agent.py
aicos/: __init__.py  cli.py
config/: company.yaml
config/templates/: agency.yaml  consulting.yaml  dev_shop.yaml  marketing_agency.yaml  saas.yaml
core/: __init__.py  communication.py  config_loader.py  memory.py  models.py  orchestrator.py  persistence.py  state.py  tools.py
dashboard/: __init__.py  app.py
dashboard/static/css/: style.css
dashboard/static/js/: app.js
dashboard/templates/: index.html
data/: crm.db
data/logs/: comms_2026-02-18.jsonl  comms_2026-02-19.jsonl  safemploy_transformationsplan.txt
data/state/: aicos.db  aicos.db-shm  aicos.db-wal  runtime.json
integrations/: __init__.py  base.py  crm.py  email_integration.py  manager.py
tests/: conftest.py  test_dashboard.py  test_persistence.py  test_state.py  test_tools.py
workflows/: __init__.py  engine.py
workflows/definitions/: ai_solution_delivery.yaml  client_onboarding.yaml  compliance_audit.yaml  content_pipeline.yaml  cross_sell_pipeline.yaml  ki_feature_development.yaml  partner_integration.yaml  project_delivery.yaml  support_escalation.yaml  trial_conversion.yaml
